Reorganized Spring notes, added some FRG information

--- a/Condensed Matter/7. Interaction in quantum field theory.md
+++ b/Condensed Matter/7. Interaction in quantum field theory.md
@@ -21,7 +21,8 @@ $$
 $$
 \Gamma[\phi_C]=W[J]-\int d^4x\,J(x)\phi_C(x).
 $$
-It is a generating functional for **proper vertices**,
+$\phi_C$ is the value of the field compatible with the source $J$, for which the effective action attains supremum.
+Effective action is a generating functional for **proper vertices**,
 $$
 \Gamma^{(n)}(x_1,...,x_n)=\left.\frac{\delta^n\Gamma[\phi_C]}{\delta\phi_C(x_1)...\delta\phi_C(x_n)}\right|_{\phi_C=0}.
 $$
@@ -34,6 +35,83 @@ But the integrals are just Fourier transform at zero four-momentum, so the funct
 $$
 V_\mathrm{eff}(\phi_C)=\sum_{n=0}^\infty\frac{1}{n!}
 \Gamma^{(n)}(p_1=0,...,p_n=0)\psi^n_C.
+$$
+One can calculate:
+$$
+\frac{\delta\Gamma[\phi_C]}{\delta\phi_C(x)}=-\int_y
+\frac{\delta W[J]}{\delta J(y)}\frac{\delta J(y)}{\delta\phi_C(x)}+
+\int_y\frac{\delta J(y)}{\delta\phi_C(x)}\phi_C(y)+J(x)=J(x).
+$$
+Form this. making in the definition of the generating functional the change of integration variable $\phi(x)\rightarrow\phi(x)+\phi_C(x)$, we get
+$$
+e^{\Gamma[\phi_C]}=\int_\Lambda\mathcal{D}\phi\exp\left(
+-S[\phi+\phi_C]+\int\frac{\delta\Gamma[\phi_C]}{\delta\phi_C}\phi
+\right),
+$$
+where $\Lambda$ is an ultraviolet cutoff (for example, due to lattice separation.)
+
+One can define IR-regulated functional:
+$$
+e^{W_k[J]=}\equiv Z_k[J]:=\exp\left(
+-\Delta S_k\left[\frac{\delta}{\delta J}\right]
+\right)
+Z[J]=
+\int_\Lambda\mathcal{D}\phi e^{-S[\phi]-\Delta S_k[\phi]+\int J\phi},
+$$
+where
+$$
+\Delta S_k[\phi]=\frac{1}{2}\int\frac{d^Dq}{(2\pi)^D}
+\phi(-q)R_k(q)\phi(q).
+$$
+With this, one can define the interpolating effective action:
+$$
+F_k[\phi]=\int J\phi-W_k[J]-\Delta S_k[\phi],
+$$
+where, again, supremum with respect to $J$ should be attained. Now,
+$$
+\frac{\delta\Gamma[\phi_C]}{\delta\phi_C(x)}+(R_k\phi_C)(x)=J(x).
+$$
+The regulator function $R_k(q)$ should satisfy:
+$$
+\begin{eqnarray}
+\lim_{q^2/k^2\rightarrow0}R_k(q)>0, \\
+\lim_{k^2/q^2\rightarrow0}R_k(q)=0, \\
+\lim_{k\rightarrow\Lambda\rightarrow\infty}R_k(q)=\infty.
+\end{eqnarray}
+$$
+This will allow to achieve:
+$$
+\Gamma_{k\rightarrow\Lambda}\approx S_\mathrm{bare},\;\;\;
+\Gamma_{k\rightarrow0}=\Gamma.
+$$
+Often, one uses:
+$$
+R_k(p)=p^2r(p^2/k^2).
+$$
+With the notation:
+$$
+	t=\ln(k/\Lambda),\;\;\;\partial_t=k\frac{d}{dk}
+$$
+one can calculate:
+$$
+\partial_tW_k[J]=-\frac{1}{2}\int\frac{d^Dq}{(2\pi)^D}\partial_tR_k(q)G_k(q)+\partial_t\Delta S_k[\phi],
+$$
+where $G_k(q)$ is the *connected* propagator.
+On the other had, one can obtain (in operator notation):
+$$
+\mathbb{1}=(\Gamma^{(2)}_k[\phi]+R_k)G_k,
+$$
+where the notation was introduced
+$$
+\Gamma^{(n)}_k[\phi]=\frac{\delta^n\Gamma_k[\phi]}{\delta\phi...\delta\phi}.
+$$
+Putting all together, the **RG flow equation** for $\Gamma_k$ is:
+$$
+\partial_t\Gamma_k[\phi]=\frac{1}{2}\mathrm{Tr}\left[
+\partial_tR_k\left(
+\Gamma^{(2)}_k[\phi]+R_k
+\right)^{-1}
+\right].
 $$
 #### Schwinger-Dyson equation
 Connected two-point function is the Green function of the proper vertex $\Gamma^{(2)}$:
