Added note about Hubbard model in second quantization

--- a/Condensed Matter/12.  Second quantization.md
+++ b/Condensed Matter/12.  Second quantization.md
@@ -73,3 +73,60 @@ H=\sum_\sigma\int d{\bf x}\Psi^\dagger_\sigma({\bf x})
 \frac{1}{2}\int d{\bf x}\int d{\bf x}'\frac{e^2}{|{\bf x}-{\bf x}'|}
 :n({\bf x})n({\bf x}'):.
 $$
+## Hubbard model
+If one takes as a basis a single 1s orbital at each lattice size, then the field operator is written as 
+$$
+\Psi^\dagger_\sigma=\sum_j\phi_{1s}^*({\bf x}-{\bf x}_j)c^\dagger_{\sigma j}.
+$$
+The Hamiltonian:
+$$
+H=\sum_\alpha\int d{\bf x}\Psi^\dagger_\alpha({\bf x})h_\mathrm{oe}({\bf x})\Psi_\alpha({\bf x})+
+\frac{1}{2}\sum_{\alpha,\beta}\int d{\bf x}d{\bf x}'
+\Psi^\dagger_\alpha({\bf x})\Psi^\dagger_\beta({\bf x}')
+v_\mathrm{ee}({\bf x}-{\bf x}')
+\Psi_\beta({\bf x}')\Psi_\alpha({\bf x}),
+$$
+where
+$$
+h_\mathrm{oe}=-\frac{\hbar^2\nabla^2}{2m}+V({\bf x}),
+$$
+$$
+v_\mathrm{ee}({\bf x}-{\bf x}')=\frac{e^2}{|{\bf x}-{\bf x}'|}
+$$
+can be written in second quantization formalism as:
+$$
+H=\sum_{\alpha;i,j} T_{ij}c^\dagger_{\alpha,i}c_{\alpha,i}+
+\frac{1}{2}\sum_{\alpha,\beta;i,j,k,l}V_{ijkl}
+c^\dagger_{\alpha,i}c^\dagger_{\beta,j}c_{\beta,k}c_{\alpha,l}.
+$$
+where
+$$
+T_{ij}=\langle i|h_\mathrm{oe}|j\rangle,\;\;\;
+V_{ijkl}=\langle ij|v_\mathrm{ee}|kl\rangle.
+$$
+The simplest version of the Hubbard model retains only onsite Coulomb repulsion between two electrons and hopping between nearest neighbors, thus:
+$$
+T_{ij}=\left\lbrace
+\begin{array}{ll}
+\epsilon, & \mathrm{if}~i = j \\
+-t,       & \mathrm{if}~i,j~\mathrm{n.n} \\
+0,        & \mathrm{otherwise}
+\end{array}
+\right.
+$$
+and
+$$
+V_{ijkl}=\left\lbrace
+\begin{array}{ll}
+U, & \mathrm{if}~i = j = k = l\\
+0,        & \mathrm{otherwise}
+\end{array}
+\right.
+$$
+Then one recovers the Hubbard model Hamiltonian:
+$$
+H=\epsilon\sum_{\sigma,j}c^\dagger_{\sigma,j}c_{\sigma,j}-
+t\sum_{\langle \sigma,ij\rangle}c^\dagger_{\sigma,i}c_{\sigma,j}+
+U\sum_jn_{j\uparrow}n_{j\downarrow}.
+$$
+
