Added a remark about the LSZ formula

--- a/Condensed Matter/7. Interaction in quantum field theory.md
+++ b/Condensed Matter/7. Interaction in quantum field theory.md
@@ -149,3 +149,32 @@ $$
 \theta\epsilon^{\mu\nu\alpha}p_\alpha.
 $$
 
+#### LSZ reduction formula
+It relates the S-matrix with correlation functions. We are interested in amplitudes of the type:
+$$
+\langle\beta_\mathrm{out}|\alpha_\mathrm{in}\rangle.
+$$
+S-matrix maps input states to output ones:
+$$
+S|\alpha_\mathrm{in}\rangle=|\alpha_\mathrm{out}\rangle.
+$$
+Therefore it appears in the following way in amplitudes:
+$$
+\langle\beta_\mathrm{out}|\alpha_\mathrm{in}\rangle=
+\langle\beta_\mathrm{in}|S^\dagger|\alpha_\mathrm{in}\rangle=
+$$
+$$
+\begin{aligned}
+&\langle
+\vec k_1,...,\vec k_n,\mathrm{out}|\vec p_1,...,\vec p_n,\mathrm{in}
+\rangle=\\
+&\prod_{i=1}^m\left(
+i\int d^d x_ie^{ik_ix_i}(-\square_{x_i}+m^2)
+\right)
+\prod_{j=1}^n\left(
+i\int d^d y_ne^{ip_jy_j}(-\square_{y_i}+m^2)
+\right)\\
+&\langle\phi(x_1)...\phi(x_m)\phi(y_1)...\phi(y_n)\rangle
+
+\end{aligned}
+$$
