Added remarks of statistical physics interpretation of generating functionals and about ghost fields

--- a/Condensed Matter/6. Quantum field theory.md
+++ b/Condensed Matter/6. Quantum field theory.md
@@ -200,3 +200,55 @@ $$
 $$
 They satisfy the homogeneous Klein-Gordon equation, therefore they are not Green functions.
 The **Pauli-Jordan function** is $\Delta_{PJ}=\Delta_{W^+}-\Delta_{W^-}$ and represents the commutator of quantum field operators.
+#### Ghost fields
+Physical variables in gauge theory belong to equivalence classes with respect to gauge transformations $U\in\cal{G}$:
+$$
+{\cal A} / {\cal G}=
+\lbrace
+A_\mu \sim A'_\mu:A_\mu,A'_\mu\in{\cal A},~\exists U\in{\cal G
+~\mathrm{with}~A'_\mu=A^U_\mu} 
+\rbrace,
+$$
+such that:
+$$
+A_\mu\rightarrow A'_\mu=A^U_\mu=UA_\mu U^\dagger-iU\partial_\mu U^\dagger.
+$$
+To define the integration measure on ${\cal G}/{\cal A}$ one splits the integration measure on $\cal A$ :
+$$
+Z[J]=\int_{\cal A}{\cal D}A~e^{iS[A]+\int d^dxJ_\mu A^\mu}=
+\left(\int_{\cal G}{\cal D}U\right)
+\left(\int_{{\cal A}/{\cal G}}\widetilde{ {\cal D}A}~e^{iS[A]+\int d^dxJ_\mu A^\mu}\right),
+$$
+where ${\cal D}U=\prod_xdU(x)$. In the path integtal over ${\cal A}/{\cal G}$ each physical field configuration should be taken into account only once, that is, each gauge orbit should be intersected only once. This requires a gauge fixing condition such that the equation $f(A^U_\mu)=0$ has a unique solution $U_0$ for a given $A_\mu$.To compensate for a choice of a function $f$ one defines $\Delta_f[A_\mu]$ such that:
+$$
+\Delta_f[A_\mu]\int_{\cal G}\delta(f(A^U_\mu))=1.
+$$
+Assuming that $f$ has a single zero for $U=U_0$ one can find that:
+$$
+\Delta_f[A_mu]=\det M_f,
+~\mathrm{where}~
+M_f(x,y)=\left.\frac{\delta f(x)}{\delta U(y)}\right|_{U=U_0}.
+$$
+Inserting this into the path integral:
+$$
+Z[J]=
+\int_{\cal A}{\cal D}A\Delta_f[A_\mu]\int_{\cal G}\delta(f(A^U_\mu))~e^{iS[A]+\int d^dxJ_\mu A^\mu}=
+\left(\int_{\cal G}{\cal D}U\right)
+\left(\int_{{\cal A}}{\cal D}A~
+\Delta_f[A_\mu]\delta(f(A_\mu))~
+e^{iS[A]+\int d^dxJ_\mu A^\mu}\right),
+$$
+where one used the fact that ${\cal D}A$, $\Delta_f[A_\mu]$, and $S[A}]$ are invariant under the transformation $A\rightarrow A^U$. One can then identify:
+$$
+\int_{{\cal A}/{\cal G}}\widetilde{{\cal D}A}=
+\int_{\cal A}{\cal D}A~\Delta_f[A_\mu]\delta(f(A_\mu)).
+$$
+$\Delta_f[A_\mu]$ can be written as a Gaussian integral over two Grassmann fields:
+$$
+\Delta_f[A_\mu]=\det M_f=
+\int{\cal D}c{\cal D}{\bar c}~\exp\left()
+i\int d^dxd^dy{\bar c}M_f(x,y)c(y)
+\right)=
+\int{\cal D}c{\cal D}{\bar c}e^{iS_\mathrm{ghost}}.
+$$
+The fields $c(x)$, ${\bar c}(x)$ are called **Fadeev-Popov ghosts**.
