--- a/Condensed Matter/7. Interaction in quantum field theory.md
+++ b/Condensed Matter/7. Interaction in quantum field theory.md
@@ -13,6 +13,7 @@ Connected Green function generating functional:
 $$
 W[J]=-i\ln Z[J].
 $$
+In Euclidean theory it is interpreted as the  free energy of a statistical system.
 One can define:
 $$
 \phi_C(x)=\langle0|\phi(x)|0\rangle_C=\frac{\delta W[J]}{\delta J(x)}.
@@ -22,6 +23,7 @@ $$
 \Gamma[\phi_C]=W[J]-\int d^4x\,J(x)\phi_C(x).
 $$
 $\phi_C$ is the value of the field compatible with the source $J$, for which the effective action attains supremum.
+In Euclidean theory it is interpreted as the Gibbs free energy of a statistical system.
 Effective action is a generating functional for **proper vertices**,
 $$
 \Gamma^{(n)}(x_1,...,x_n)=\left.\frac{\delta^n\Gamma[\phi_C]}{\delta\phi_C(x_1)...\delta\phi_C(x_n)}\right|_{\phi_C=0}.
