Expanded basic definitions related to field operator

--- a/Condensed Matter/12.  Second quantization.md
+++ b/Condensed Matter/12.  Second quantization.md
@@ -1,3 +1,73 @@
+We will use completeness relation for position-spin kets:
+$$
+\int d{\bf x}|{\bf x}\rangle\langle{\bf x}|=\mathbb{1},
+$$
+and we choose the normalization of the inner product with momentum-spin:
+$$
+\langle{\bf x}|{\bf p}\sigma'\rangle=
+\delta_{\sigma\sigma'}\langle{\bf r}|{\bf p}\rangle=
+\delta_{\sigma\sigma'}e^{i{\bf p\cdot r}}.
+$$
+so for the momentum-spin the completeness relation is:
+$$
+\sum_\sigma\int\frac{d{\bf p}}{(2\pi)^3}|{\bf p}\sigma\rangle
+\langle{\bf p}\sigma|=\mathbb{1}.
+$$
+The inner product between two position-spin kets of many particles:
+$$
+\langle{\bf x}'_1,...,{\bf x}'_N|{\bf x}_1,...,{\bf x}_N\rangle=
+	\sum_P(\pm)^P\prod_{j=1}^N\delta({\bf x}'_j-{\bf x}_{P(j)})
+$$
+and the completeness relation takes the form:
+$$
+\frac{1}{N!}\int d{\bf x}_1,...,d{\bf x}_N
+|{\bf x}_1,...,{\bf x}_N\rangle\langle{\bf x}_1,...,{\bf x}_N|=\mathbb{1}.
+$$
+Field operators are defined as:
+$$
+\begin{split}
+|{\bf x}_1\rangle & = \hat\psi^\dagger({\bf x}_1)|0\rangle, \\
+|{\bf x}_1{\bf x}_2\rangle & = \hat\psi^\dagger({\bf x}_2)
+\hat\psi^\dagger({\bf x}_1)|0\rangle,
+\end{split}
+$$
+and so on. Their (anit-)commutation relations:
+$$
+[\hat\psi^\dagger({\bf x}),\hat\psi^\dagger({\bf y})]_\mp=0=
+[\hat\psi({\bf x}),\hat\psi({\bf y})]_\mp
+$$
+The destruction operator acting on a multiparticle position-spin ket:
+$$
+\hat\psi({\bf x})|{\bf y}_1,...,{\bf y}_N\rangle=
+\sum_{k=1}^N(\pm)^{N+k}\delta({\bf x}-{\bf y}_k)
+|{\bf y}_1,...,{\bf y}_{k-1},{\bf y}_{k+1},...,{\bf y}_N\rangle.
+$$
+Which is used to derive:
+$$
+[\hat\psi({\bf x}),\hat\psi^\dagger({\bf y})]_\mp=\delta({\bf x}-{\bf y}).
+$$
+A general basis state with quantum numbers $n$ is created by the operator:
+$$
+\hat d^\dagger_n=\int d{\bf x}\phi_n({\bf x})\hat\psi^\dagger({\bf x}),
+$$
+where:
+$$
+\langle{\bf x}|n\rangle=\phi_n({\bf x})=\phi_s({\bf r})\delta_{\tau\sigma}
+$$
+and $n=(s\tau)$ with orbital quantum numbers $s$ and spin $\tau$, and ${\bf x}=({\bf r}\sigma)$.
+Expansion of multiparticle position-spin kets in general state basis and other way around:
+$$
+\begin{split}
+|{\bf x}_1,...,{\bf x}_N\rangle & =
+\sum_{n_1,...,n_N}\phi^*_{n_1}({\bf x}_1)...\phi^*_{n_N}({\bf x}_N)
+|n_1,...,n_N\rangle \\
+
+|n_1,...,n_N\rangle & =
+\int d{\bf x}_1...d{\bf x}_N\phi_{n_1}({\bf x}_1)...\phi_{n_N}({\bf x}_N)
+|{\bf x}_1,...,{\bf x}_N\rangle 
+\end{split}
+$$
+
 One electron potential:
 $$
 V({\bf x})\phi_n({\bf x})=
