Expanded the note about second quantization

--- a/Condensed Matter/12.  Second quantization.md
+++ b/Condensed Matter/12.  Second quantization.md
@@ -52,7 +52,7 @@ $$
 $$
 where:
 $$
-\langle{\bf x}|n\rangle=\phi_n({\bf x})=\phi_s({\bf r})\delta_{\tau\sigma}
+\langle{\bf x}|n\rangle\equiv\phi_n({\bf x})=\phi_s({\bf r})\delta_{\tau\sigma}
 $$
 and $n=(s\tau)$ with orbital quantum numbers $s$ and spin $\tau$, and ${\bf x}=({\bf r}\sigma)$.
 Expansion of multiparticle position-spin kets in general state basis and other way around:
@@ -67,7 +67,34 @@ $$
 |{\bf x}_1,...,{\bf x}_N\rangle 
 \end{split}
 $$
-
+Total number of particles:
+$$
+\hat N=\int d{\bf x}\hat n({\bf x}),~~~
+\hat n({\bf x})=\hat\psi^\dagger({\bf x})\hat\psi({\bf x}).
+$$
+Non-interacting Hamiltonian:
+$$
+\hat H_0=\int d{\bf x}d{\bf x}'\hat\psi^\dagger({\bf x})
+\langle{\bf x}|\hat h|{\bf x}'\rangle
+\hat\psi({\bf x}').
+$$
+Interaction Hamiltonian:
+$$
+\hat H_I=\frac{1}{2}\int d{\bf x}d{\bf x}'
+v({\bf x},{\bf x}')\hat\psi^\dagger({\bf x})\hat\psi^\dagger({\bf x}')
+\hat\psi({\bf x}')\hat\psi({\bf x}).
+$$
+One-particle density matrix:
+$$
+\Gamma_1({\bf y};{\bf x})=
+\langle{\bf \Psi}|\hat\psi^\dagger({\bf x})
+\hat\psi({\bf y})
+|{\bf\Psi}\rangle.
+$$
+It has the following property:
+$$
+\Gamma_1({\bf y};{\bf x})=\Gamma^*_1({\bf x};{\bf y}).
+$$
 One electron potential:
 $$
 V({\bf x})\phi_n({\bf x})=
