Added information about Keldysh components

--- a/Condensed Matter/14. Time-dependent theory.md
+++ b/Condensed Matter/14. Time-dependent theory.md
@@ -149,7 +149,7 @@ $$
 \hat\psi^\dagger_H({\bf x}'_n)...\hat\psi^\dagger_H({\bf x}'_1)
 \right\}.
 $$
-the hierarchy equations of motion are:
+the Martin-Schwinger hierarchy equations of motion are:
 $$
 \begin{split}
 
@@ -176,4 +176,145 @@ where one assumed that $\hat h$ is diagonal and
 $$
 \langle{\bf x}_1|\hat h(z_1)|{\bf x_2}\rangle=
 h(1)\delta({\bf x}_1-{\bf x}_2)=\delta({\bf x}_1-{\bf x}_2)h(2).
+$$
+The Green's function follow the Kubo-Martin-Schwinger relations:
+$$
+\begin{split}
+G_n(1,...,{\bf x}_k,z_i,...,n;1',...,n')=
+\pm G_n(1,...,{\bf x}_k,z_f,...,n;1',...,n'),\\
+G_n(1,...n;1',...,{\bf x}'_k,z_i,...,,n')=
+\pm G_n(1,...,n;1',...,{\bf x}'_k,z_f,...,n').
+\end{split}
+$$
+In the non-interacting case $v=0$, only higher-order Green's functions are coupled to the lower-order ones. In that case, the hierarchy equations can be solved using the Wick theorem:
+$$
+G_{0,n}(1,...,n;1',...,n')=
+\left|
+\begin{matrix}
+G_0(1;1') & ...  & G_0(1;n')\\
+\vdots    &      & \vdots   \\
+G_0(n;1') & ...  & G_0(n;n')
+\end{matrix}
+\right|_\pm.
+$$
+In a more general case, for interacting one-particle Green's function,
+$$
+G(a;b)=\frac{
+\sum_{k=0}^\infty\frac{1}{k!}\left(\frac{1}{2}\right)^k
+\int v(1;1')...v(k;k')\left|
+\begin{matrix}
+G_0(a;b)  & G_0(a;1^+)  & ... & G_0(a;k^+)  \\
+G_0(1;b)  & G_0(1;1^+)  & ... & G_0(1;k^+)  \\
+\vdots    & \vdots      &     & \vdots      \\
+G_0(k';b) & G_0(k';1^+) & ... & G_0(k';k'^+) \\
+\end{matrix}
+\right|_\pm
+}{
+\sum_{k=0}^\infty\frac{1}{k!}\left(\frac{1}{2}\right)^k
+\int v(1;1')...v(k;k')\left|
+\begin{matrix}
+G_0(1;1^+)  & G_0(1;1'^+)  & ... & G_0(1;k'^+)  \\
+G_0(1';1+)  & G_0(1';1'^+)  & ... & G_0(1';k'^+)  \\
+\vdots    & \vdots      &     & \vdots      \\
+G_0(k';1^+) & G_0(k';1'^+) & ... & G_0(k';k'^+) \\
+\end{matrix}
+\right|_\pm
+}.
+$$
+For two-particle,
+$$
+G_2(a,b;c,d)=\frac{
+\sum_{k=0}^\infty\frac{1}{k!}\left(\frac{1}{2}\right)^k
+\int v(1;1')...v(k;k')\left|
+\begin{matrix}
+G_0(a;c)  & G_0(a;d)  & ... & G_0(a;k^+)  \\
+G_0(b;c)  & G_0(b;d)  & ... & G_0(b;k^+)  \\
+\vdots    & \vdots      &     & \vdots      \\
+G_0(k';c) & G_0(k';d) & ... & G_0(k';k'^+) \\
+\end{matrix}
+\right|_\pm
+}{
+\sum_{k=0}^\infty\frac{1}{k!}\left(\frac{1}{2}\right)^k
+\int v(1;1')...v(k;k')\left|
+\begin{matrix}
+G_0(1;1^+)  & G_0(1;1'^+)  & ... & G_0(1;k'^+)  \\
+G_0(1';1+)  & G_0(1';1'^+)  & ... & G_0(1';k'^+)  \\
+\vdots    & \vdots      &     & \vdots      \\
+G_0(k';1^+) & G_0(k';1'^+) & ... & G_0(k';k'^+) \\
+\end{matrix}
+\right|_\pm
+}.
+$$For partition function:
+$$
+\frac{Z}{Z_0}=\sum_{k=0}^\infty\frac{1}{k!}\left(\frac{1}{2}\right)^k
+\int v(1;1')...v(k;k')\left|
+\begin{matrix}
+G_0(1;1^+)  & G_0(1;1'^+)  & ... & G_0(1;k'^+)  \\
+G_0(1';1+)  & G_0(1';1'^+)  & ... & G_0(1';k'^+)  \\
+\vdots    & \vdots      &     & \vdots      \\
+G_0(k';1^+) & G_0(k';1'^+) & ... & G_0(k';k'^+) \\
+\end{matrix}
+\right|_\pm.
+$$
+In the case of a two-point correlator:
+$$
+k(z,z')=
+\mathrm{Tr}\left[\hat\rho\hat k(z,z')\right]=
+\mathrm{Tr}\left[\hat\rho\hat {\cal T}\left\{
+\hat O_1(z)\hat O_2(z')).
+\right\}\right]\equiv\theta(z,z')k^>(z,z')+\theta(z',z)k^<(z,z').
+$$
+Then one has
+$$
+k^\lessgtr(t_+,z')=k^\lessgtr(t_-,z'),~~~k^\lessgtr(z,t'_+)=k^\lessgtr(z,t'_-).
+$$
+One defines:
+$$
+\begin{split}
+k^>(t,t')\equiv k(t_+,t'_-),&~~~k^<(t,t')\equiv k(t_-,t'_+),\\
+k^\ulcorner(\tau,t)\equiv k(t_0-i\tau,t_\pm),&~~~k^\urcorner(t,\tau)\equiv k(t_\pm,t_0-i\tau).\\
+k^M(\tau,\tau')\equiv k(t_0-i\tau,t_0-i\tau')&=\delta(t_0-i\tau,t_0-i\tau')k^\delta(t_0-i\tau)+k^M_r(\tau,\tau'),
+\end{split}
+$$
+where
+$$
+k^M_r(\tau,\tau')=\theta(\tau-\tau')k^>(t_0-i\tau,t_0-i\tau')+
+\theta(\tau'-\tau)k^<(t_0-i\tau,t_0-i\tau').
+$$
+Retarded and advanced functions:
+$$
+\begin{split}
+k^R(t,t')=k^\delta(t)\delta(t-t')+\theta(t-t')[k^>(t,t')-k^<(t,t')],\\
+k^A(t,t')=k^\delta(t)\delta(t-t')-\theta(t'-t)[k^>(t,t')-k^<(t,t')].
+\end{split}
+$$
+Two convoutions:
+$$
+\begin{split}
+f\cdot g\equiv\int_{t_0}^\infty d\bar tf(\bar t)g(\bar t),~~~
+f*g=-i\int_0^\beta d\bar\tau f(\bar\tau)g(\bar\tau).
+\end{split}
+$$
+Then if we define:
+$$
+c(z,z')=\int_\gamma d\bar za(z,\bar z)b\bar z,z'),
+$$
+one gets:
+$$
+\begin{split}
+c^>&=a^>\cdot b^A+a^R\cdot b^>+a^\urcorner*b\ulcorner,\\
+c^<&=a^<\cdot b^A+a^R\cdot b^<+a^\urcorner*b\ulcorner.\\
+c^\urcorner&=a^R\cdot b^\urcorner+a^\urcorner* b^M,\\
+c^\ulcorner&=a^\ulcorner\cdot b^A+a^M*b^\ulcorner,\\
+c^M&=a^M*b^M.
+\end{split}
+$$
+Time-ordered and anti-time-ordered components:
+$$
+\begin{split}
+k^T(t,t')\equiv k(t_-,t_-')=k^\delta(t)\delta(t-t')+
+\theta(t-t')k^>(t,t')+\theta(t'-t)k^<(t,t'),\\
+k^{\bar T}(t,t')\equiv k(t_+,t_+')=-k^\delta(t)\delta(t-t')+
+\theta(t'-t)k^>(t,t')+\theta(t-t')k^<(t,t').
+\end{split}
 $$
