Continued with BEC

--- a/Condensed Matter/15. Complex field Bose-Einstein condensate.md
+++ b/Condensed Matter/15. Complex field Bose-Einstein condensate.md
@@ -80,3 +80,20 @@ G^{-1}=\left(\begin{matrix}
 \lambda n_0 & -\omega+\lambda n_0+p^2/2m
 \end{matrix}\right)
 $$
+By inverting the above matrix:
+$$
+G=\frac{2}{-4\omega^2m^2+4\lambda n_0mp^2+p^4}\left(\begin{matrix}
+-2m^2\omega+2\lambda n_0m^2+p^2m & -2\lambda n_0m^2 \\
+-2\lambda n_0m^2 & 2m^2\omega+2\lambda n_0m^2+p^2m
+\end{matrix}\right).
+$$
+Poles of the Green function always provide dispersion relations of the excitations of the system that can be produced by a vanishingly small external source.
+The poles are:
+$$
+\omega_\pm(p)=\pm\frac{\sqrt{4\lambda n_0mp^2+p^4}}{2m},
+$$
+which for high momentum or small condensate gives usual particles. But in the limit ${\bf p}\rightarrow 0$, it is:
+$$
+\omega_\pm(p)=\pm p\sqrt{\lambda n_0/m},
+$$
+Which are not particles, but waves - phonons with the speed of sound $v=\sqrt{\lambda n_0.m}$.
