Finished the fundamentals of BEC

--- a/Condensed Matter/15. Complex field Bose-Einstein condensate.md
+++ b/Condensed Matter/15. Complex field Bose-Einstein condensate.md
@@ -97,3 +97,27 @@ $$
 \omega_\pm(p)=\pm p\sqrt{\lambda n_0/m},
 $$
 Which are not particles, but waves - phonons with the speed of sound $v=\sqrt{\lambda n_0.m}$.
+We can rewrite the Green function (after analytic continuation to the Minkowski space) as a sum of two poles with their residuals:
+$$
+G=\frac{u_p^2}{\omega-\omega_++i\delta}+\frac{v_p^2}{\omega-\omega_--i\delta}.
+$$
+The first term is the emission of **quasiparticles**, second their absorption. Since there must exist something to be aborbed, this implies the existence of quasiparticles with ${\bf p}\neq0$, while at zeroth order the condensate consisted of non-moving particles.
+With the explicit form:
+$$
+v_p^2=\frac{p^2/2m+\lambda n_0}{2\omega_+}-\frac{1}{2},
+$$
+the condensate renormalization, written as:
+$$
+n = n_0+\int\frac{d^3p}{(2\pi)^3}v_p^2,
+$$
+is a finite integral.
+WIth the definition of scattering length:
+$$
+\lambda\equiv\frac{4\pi\hbar^2}{m}a,
+$$
+the depletion of the condensate equals:
+$$
+\frac{n-n_0}{n_0}=\frac{8}{3}\left(
+\frac{n_0a^3}{\pi}
+\right)^{1/2}.
+$$
