Added a note about free spectral functions of different fields

--- a/Condensed Matter/6. Quantum field theory.md
+++ b/Condensed Matter/6. Quantum field theory.md
@@ -246,7 +246,7 @@ $$
 $\Delta_f[A_\mu]$ can be written as a Gaussian integral over two Grassmann fields:
 $$
 \Delta_f[A_\mu]=\det M_f=
-\int{\cal D}c{\cal D}{\bar c}~\exp\left()
+\int{\cal D}c{\cal D}{\bar c}~\exp\left(
 i\int d^dxd^dy{\bar c}M_f(x,y)c(y)
 \right)=
 \int{\cal D}c{\cal D}{\bar c}e^{iS_\mathrm{ghost}}.
